--- a/config_settings.yaml
+++ b/config_settings.yaml
@@ -1,7 +1,21 @@
 security: {SANITIZE_INPUT: true, RATE_LIMIT: 20, API_TIMEOUT: 30, CACHE_ENABLED: true}
-retrieval: {COLLECTION_NAME: industrial_tech, K_VALUE: 6, SCORE_THRESHOLD: 0.6, LAMBDA_MULT: 0.6,
-  SEARCH_TYPE: mmr, DOMAIN_SIMILARITY_THRESHOLD: 0.65, SPARSE_RELEVANCE_THRESHOLD: 0.15,
-  FUSED_RELEVANCE_THRESHOLD: 0.45, SEMANTIC_WEIGHT: 0.7, SPARSE_WEIGHT: 0.3, PERFORM_DOMAIN_CHECK: true}
+retrieval:
+  COLLECTION_NAME: Industrial_tech
+  K_VALUE: 6
+  SCORE_THRESHOLD: 0.6
+  LAMBDA_MULT: 0.6
+  SEARCH_TYPE: mmr
+  DOMAIN_SIMILARITY_THRESHOLD: 0.65
+  SPARSE_RELEVANCE_THRESHOLD: 0.15
+  FUSED_RELEVANCE_THRESHOLD: 0.45
+  SEMANTIC_WEIGHT: 0.7
+  SPARSE_WEIGHT: 0.3
+  PERFORM_DOMAIN_CHECK: true
+  WEAVIATE_HOST: localhost
+  WEAVIATE_HTTP_PORT: 8091
+  WEAVIATE_GRPC_PORT: 51002
+  retrieve_with_history: false
+  WEAVIATE_TIMEOUT: [10, 120]
 model: {LLM_TEMPERATURE: 0.6, MAX_TOKENS: 1024, OLLAMA_MODEL: deepseek-r1, EMBEDDING_MODEL: nomic-embed-text,
   TOP_P: 0.9, FREQUENCY_PENALTY: 0.1, SYSTEM_MESSAGE: You are a helpful AI assistant
     for industrial automation. Use the provided context and conversation history to
@@ -12,9 +26,51 @@ document:
   CHUNK_OVERLAP: 56
   FILE_TYPES: [pdf, txt, csv, docx, md]
   PARSE_TABLES: true
-  GENERATE_SUMMARY: false
+  GENERATE_SUMMARY: true
 paths: {DOCUMENT_DIR: ./data, DOMAIN_CENTROID_PATH: ./domain_centroid.npy}
 env:
-  DOMAIN_KEYWORDS: []
+  DOMAIN_KEYWORDS: [Industrial Automation, Honeywell, SCADA, PLC, IoT, Honeywell Digital
+      Transformation, Process Automation, Manufacturing Automation, Industrial Internet
+      of Things (IIoT), Automation Systems, Distributed Control System (DCS), Real-time
+      Data, Industrial Networks, Machine Learning in Automation, Predictive Maintenance,
+    Edge Computing, Control Systems Engineering, Digital Twin, Industrial Control
+      Systems (ICS), Process Control, Smart Factories, Advanced Process Control (APC),
+    Remote Monitoring, Industrial Sensors, SCADA Software, Honeywell Experion, IoT
+      Sensors, Automation Solutions, Honeywell Process Solutions, Distributed Automation,
+    PLC Programming, SCADA Integration, Industrial Safety, Automation Architecture,
+    Manufacturing Execution Systems (MES), IIoT Connectivity, Smart Manufacturing,
+    Cloud-based Automation, Industrial Data Analytics, Energy Management Systems,
+    Predictive Analytics, Automated Control Loops, SCADA Security, Process Optimization,
+    Industrial Robotics, Industrial Wireless Communication, Edge Analytics, Supervisory
+      Control, Data Acquisition Systems, Data Visualization Tools, Honeywell Connected
+      Plant, Cybersecurity in Automation, Process Control Optimization, Automated
+      Refineries, Advanced Control Systems, Autonomous Manufacturing, PLC-based Automation,
+    SCADA Data Collection, Industrial PLC Systems, Remote Automation, Machine Vision
+      Systems, Data-Driven Insights, Industrial Automation Software, Control Panel
+      Design, Industrial Automation Integration, System Integration, Industrial Ethernet,
+    Refineries Control Systems, Distributed Sensors, Control System Architecture,
+    Industrial IoT Devices, Wireless IoT Networks, Real-time Monitoring, Process Data
+      Analytics, Honeywell Safety Systems, Industrial Control Panel, Automation Services
+      for Refineries, Advanced Industrial Automation, Oil and Gas Automation, Refineries
+      Digital Transformation, Automated Manufacturing Systems, Control and Monitoring
+      Systems, Process Flow Automation, Honeywell Smart Industry, System Fault Detection,
+    Factory Automation Solutions, Process Monitoring Solutions, SCADA Control Systems,
+    PLC Diagnostics, Smart Manufacturing Solutions, Refineries Automation Solutions,
+    Operational Technology (OT), Digital Control Systems, PLC-based Control Systems,
+    Honeywell Industrial Solutions, Industry 4.0 Automation, Data-Driven Process Control,
+    Process Simulation Software, Industrial Process Systems, Honeywell Industrial
+      IoT, Experion PKS, Safety Manager, MasterLogic PLC, HC900 Hybrid Controller,
+    SmartLine Transmitters, C300 Controller, TotalFlow, OneWireless, Enraf, FlexTech
+      Controllers, Genetec, Field Device Manager, Process Historian, TDC 3000, ControlEdge,
+    LCA (Lifecycle Automation), PMA, Experion LX, ProView, Smart Automation, Web HMI,
+    Vibration Monitoring, Field Instruments, HMI Systems, Cloud Control, Product Simulation,
+    WorkStation, 3D Visualization, Power Systems, ControlRoom Management, DeviceNet,
+    Control Hardware, RTAC, SCADA Solutions, Asset Performance, FieldBus, Equipment
+      Performance Monitoring, E-Stop Systems, Variable Frequency Drives, HART Communicators,
+    Smart Devices, Thermal Imaging, Industrial Robots, ControlEdge PLC, Process Automation
+      Servers, Gas Detection Systems]
   AUTO_DOMAIN_KEYWORDS: []
   USER_ADDED_KEYWORDS: [Emerson, competitors, SLB, VSD]
+pipeline: {max_history_turns: 5}
+domain_keyword_extraction: {keybert_model: all-MiniLM-L6-v2, top_n_per_doc: 50, final_top_n: 200,
+  min_doc_freq: 2, diversity: 0.6, no_pos_filter: false}
