--- a/config_settings.yaml
+++ b/config_settings.yaml
@@ -1,58 +1,150 @@
-security: {SANITIZE_INPUT: false, RATE_LIMIT: 20, API_TIMEOUT: 30, CACHE_ENABLED: false}
+security: {SANITIZE_INPUT: true, RATE_LIMIT: 20, API_TIMEOUT: 30, CACHE_ENABLED: true}
 retrieval:
-  COLLECTION_NAME: Math
-  K_VALUE: 3
+  COLLECTION_NAME: Industrial_tech
+  K_VALUE: 6
   SCORE_THRESHOLD: 0.6
-  LAMBDA_MULT: 0.5
+  LAMBDA_MULT: 0.6
   SEARCH_TYPE: mmr
   DOMAIN_SIMILARITY_THRESHOLD: 0.65
   SPARSE_RELEVANCE_THRESHOLD: 0.15
   FUSED_RELEVANCE_THRESHOLD: 0.45
   SEMANTIC_WEIGHT: 0.7
   SPARSE_WEIGHT: 0.3
-  PERFORM_DOMAIN_CHECK: false
-  PERFORM_TECHNICAL_VALIDATION: false
+  PERFORM_DOMAIN_CHECK: true
+  PERFORM_TECHNICAL_VALIDATION: true
   WEAVIATE_HOST: localhost
   WEAVIATE_HTTP_PORT: 8091
   WEAVIATE_GRPC_PORT: 51002
   retrieve_with_history: false
   WEAVIATE_TIMEOUT: [10, 120]
 model:
-  PROVIDER_URLS: {anthropic: 'https://api.anthropic.com/v1/complete', cohere: 'https://api.cohere.com/v1/completions',
-    deepseek: 'https://api.deepseek.com/chat/completions', openai: 'https://api.openai.com/v1/chat/completions'}
-  EXTERNAL_API_MODEL_DEFAULTS: {anthropic: claude-v1, cohere: command-nightly, deepseek: deepseek-chat,
-    openai: gpt-3.5-turbo}
-  LLM_TEMPERATURE: 1.0
+  PROVIDER_URLS: {deepseek: 'https://api.deepseek.com/v1/chat/completions', openai: 'https://api.openai.com/v1/chat/completions',
+    anthropic: 'https://api.anthropic.com/v1/complete', cohere: 'https://api.cohere.com/v1/completions'}
+  EXTERNAL_API_MODEL_DEFAULTS: {openai: gpt-3.5-turbo, anthropic: claude-v1, cohere: command-nightly,
+    deepseek: deepseek-chat}
+  LLM_TEMPERATURE: 0.4
   MAX_TOKENS: 1024
   OLLAMA_MODEL: deepseek-r1
   EMBEDDING_MODEL: nomic-embed-text
   TOP_P: 0.9
-  FREQUENCY_PENALTY: 0.2
-  SYSTEM_MESSAGE: Bleep bloop! I am Sparky, the slightly eccentric automation bot!
-    I'll answer using the context... probably... but expect weird analogies, maybe
-    a pun, or a random fact about resistors! Let's get automating... maybe? Zap!
+  FREQUENCY_PENALTY: 0.1
+  SYSTEM_MESSAGE: Synthesize information strictly from the provided context documents.
+    Answer thoroughly based ONLY on the retrieved text. If the answer isn't in the
+    context, state that clearly.
   EXTERNAL_API_PROVIDER: deepseek
   EXTERNAL_API_MODEL_NAME: null
   MERGE_STRATEGY: api_first
 document:
-  CHUNK_SIZE: 2048
-  CHUNK_OVERLAP: 200
+  CHUNK_SIZE: 345
+  CHUNK_OVERLAP: 56
   MIN_CONTENT_LENGTH: 50
   FILE_TYPES: [pdf, txt, csv, docx, md]
-  PARSE_TABLES: false
-  GENERATE_SUMMARY: false
-paths: {DOCUMENT_DIR: ./data, DOMAIN_CENTROID_PATH: ./domain_centroid.npy}
+  PARSE_TABLES: true
+  GENERATE_SUMMARY: true
+paths: {DOCUMENT_DIR: ./data, DOMAIN_CENTROID_PATH: ./domain_centroid.npy, CENTROID_DIR: ./centroids}
 env:
-  DOMAIN_KEYWORDS: []
+  DOMAIN_KEYWORDS: [Industrial Automation, Honeywell, SCADA, PLC, IoT, Honeywell Digital
+      Transformation, Process Automation, Manufacturing Automation, Industrial Internet
+      of Things (IIoT), Automation Systems, Distributed Control System (DCS), Real-time
+      Data, Industrial Networks, Machine Learning in Automation, Predictive Maintenance,
+    Edge Computing, Control Systems Engineering, Digital Twin, Industrial Control
+      Systems (ICS), Process Control, Smart Factories, Advanced Process Control (APC),
+    Remote Monitoring, Industrial Sensors, SCADA Software, Honeywell Experion, IoT
+      Sensors, Automation Solutions, Honeywell Process Solutions, Distributed Automation,
+    PLC Programming, SCADA Integration, Industrial Safety, Automation Architecture,
+    Manufacturing Execution Systems (MES), IIoT Connectivity, Smart Manufacturing,
+    Cloud-based Automation, Industrial Data Analytics, Energy Management Systems,
+    Predictive Analytics, Automated Control Loops, SCADA Security, Process Optimization,
+    Industrial Robotics, Industrial Wireless Communication, Edge Analytics, Supervisory
+      Control, Data Acquisition Systems, Data Visualization Tools, Honeywell Connected
+      Plant, Cybersecurity in Automation, Process Control Optimization, Automated
+      Refineries, Advanced Control Systems, Autonomous Manufacturing, PLC-based Automation,
+    SCADA Data Collection, Industrial PLC Systems, Remote Automation, Machine Vision
+      Systems, Data-Driven Insights, Industrial Automation Software, Control Panel
+      Design, Industrial Automation Integration, System Integration, Industrial Ethernet,
+    Refineries Control Systems, Distributed Sensors, Control System Architecture,
+    Industrial IoT Devices, Wireless IoT Networks, Real-time Monitoring, Process Data
+      Analytics, Honeywell Safety Systems, Industrial Control Panel, Automation Services
+      for Refineries, Advanced Industrial Automation, Oil and Gas Automation, Refineries
+      Digital Transformation, Automated Manufacturing Systems, Control and Monitoring
+      Systems, Process Flow Automation, Honeywell Smart Industry, System Fault Detection,
+    Factory Automation Solutions, Process Monitoring Solutions, SCADA Control Systems,
+    PLC Diagnostics, Smart Manufacturing Solutions, Refineries Automation Solutions,
+    Operational Technology (OT), Digital Control Systems, PLC-based Control Systems,
+    Honeywell Industrial Solutions, Industry 4.0 Automation, Data-Driven Process Control,
+    Process Simulation Software, Industrial Process Systems, Honeywell Industrial
+      IoT, Experion PKS, Safety Manager, MasterLogic PLC, HC900 Hybrid Controller,
+    SmartLine Transmitters, C300 Controller, TotalFlow, OneWireless, Enraf, FlexTech
+      Controllers, Genetec, Field Device Manager, Process Historian, TDC 3000, ControlEdge,
+    LCA (Lifecycle Automation), PMA, Experion LX, ProView, Smart Automation, Web HMI,
+    Vibration Monitoring, Field Instruments, HMI Systems, Cloud Control, Product Simulation,
+    WorkStation, 3D Visualization, Power Systems, ControlRoom Management, DeviceNet,
+    Control Hardware, RTAC, SCADA Solutions, Asset Performance, FieldBus, Equipment
+      Performance Monitoring, E-Stop Systems, Variable Frequency Drives, HART Communicators,
+    Smart Devices, Thermal Imaging, Industrial Robots, ControlEdge PLC, Process Automation
+      Servers, Gas Detection Systems]
   AUTO_DOMAIN_KEYWORDS: [2018 www honeywellprocess, lcn honeywell confidential, honeywell
       portfolio update, 2018 2018 honeywell, q4000 frame scanner, glossary term 119,
     hidden markov model, 2018 honeywell international, honeywellprocess com 2019,
-    honeywell trademark]
+    honeywell trademark, honeywell trademark honeywell, honeywell automation investment,
+    segment profit, 2019 www honeywellprocess, portfolio honeywell portfolio, comparable
+      gaap measures, gaap measures portfolio, controller masterlogic plc, ootthheerr
+      wwaarrrraannttiieess eexxpprreesssseedd, com 2018 honeywell, "honeywell international\
+      \ s\xE0rl", lcn elcn migration, refinery rijeka refinery, emission reductions
+      honeywell, experion lcn honeywell, honeywell portfolio, trademark honeywell
+      international, 2019 honeywell, remedy honeywell warrants, hart smartview terminals,
+    portfolio honeywell, honeywell account manager, shall honeywell liable, future
+      use table, discriminant analysis flda, turbomachinery controls emulation, trainview
+      operator hmi, contact honeywell sales, lcn honeywell, honeywell disclaims, refinery
+      salzbergen refinery, standardization hmi libraries, 083339 crank arm, masterlogic
+      ml200 plc, herculink trademark honeywell, non gaap financial, honeywell com,
+    legacy scada systems, honeywell liable consequential, honeywell process solutions,
+    pacing 12 injectors, honeywell taiwan fax, divestiture related costs, masterlogic
+      plc, refprop thermodynamic engine, www honeywell com, ccc control emulated,
+    q4000 scanner, honeywell liable, "\u0437\u0430 \u043E\u043F\u0440\u0435\u0434\u0435\
+      \u043B\u0435\u043D\u0438\u0435 \u043F\u0440\u0438\u0433\u043E\u0434\u043D\u043E\
+      \u0441\u0442\u0438", com 2019 honeywell, calculations available dr45aw, "\u0442\u0435\
+      \u043C\u043F\u0435\u0440\u0430\u0442\u0443\u0440\u0435 \u043A\u043E\u043C\u043F\
+      \u044C\u044E\u0442\u0435\u0440\u043E\u043C \u0438\u0441\u043F\u043E\u043B\u044C\
+      \u0437\u0443\u044F", integrated systems honeywell, turkey aegean refinery, nearest
+      shrunken centroids, rheinland refinery rijeka, cbm maintenance programs, www
+      honeywell, experion alarm management, honeywell ionic battery, dimensions long
+      port, honeywell warrants, controledge hc900 experion, masterlogic 200 plc, organic
+      sales percent, refinery burgas refinery, 17 hidden markov, speciality aerospace
+      basic, glossary, "\u0434\u0438\u0430\u043F\u0430\u0437\u043E\u043D\u043E\u043C\
+      \ \u0434\u043B\u044F \u043F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0439",
+    motor unit herculine, organic sales percentage, distribution probability coin,
+    glossary term, bayesian inference functions, compliance smartradar flexline, earnings
+      share adjusted, "hold \u0440\u0438\u0441\u0443\u043D\u043E\u043A \u043E\u043F\
+      \u0435\u0440\u0430\u0442\u043E\u0440\u0441\u043A\u0438\u0439", refinery gothenburg
+      refinery, honeywellprocess com contact, oorr rreeppllaaccee wwiitthhoouutt,
+    modular honeywell ionic, 2010 version masterlogic, computer interface herculink,
+    honeywell confidential, "\u043E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\
+      \u043D\u043D\u043E\u0441\u0442\u044C \u0437\u0430 \u043E\u043F\u0440\u0435\u0434\
+      \u0435\u043B\u0435\u043D\u0438\u0435", sustaining safety operational, socar
+      state oil, interface herculink computer, water ph measurement, use conjugate
+      priors, implemented controledge hc900, controllers honeywell confidential, pernis
+      refinery, honeywell automation, thermistor provides feedback, define loss function,
+    honeywell china thailand, refinery donges refinery, operating temperature range,
+    contact honeywell account, rreeppllaaccee wwiitthhoouutt cchhaarrggee, macro drivers
+      products, inference graphical models, execution portfolio transformation, automation
+      vendor means, honeywell ionic modular, markov model 17, information important
+      aspects, configuration elcn bridge, sensing honeywell com, herculine electric
+      actuator, litvinov refinery, life cycle support, china thailand honeywell, 083336
+      083339 crank, description glossary term, 23 process honeywell, kcabdeef overview
+      honeywell, version masterlogic 200, gaap measures, reductions honeywell confidential,
+    metering automation powered, adjusted earnings share, enhanced airflow sensors,
+    industrial hart smartview, fax honeywell korea, controledge hc900, refinery sannazzaro
+      refinery, ccc supervisory trainview, introduction 17 markov, cressier refinery,
+    modbus communications totalizers, advantages legacy scada, masterlogic 200 specifications,
+    honeywell advanced analytical, rs232c masterlogic plc, honeywell disclaims implied,
+    machine production performance, safety operational excellence, appendix honeywell
+      portfolio, hidden markov, expected future developments, 2018 honeywell]
   USER_ADDED_KEYWORDS: []
-  SELECTED_N_TOP: 10
+  SELECTED_N_TOP: 155
 pipeline: {max_history_turns: 5}
-ingestion: {CENTROID_AUTO_THRESHOLD: 0.2, CENTROID_DIVERSITY_THRESHOLD: 0.52, CENTROID_UPDATE_MODE: auto,
+ingestion: {CENTROID_AUTO_THRESHOLD: 0.5, CENTROID_DIVERSITY_THRESHOLD: 0.01, CENTROID_UPDATE_MODE: auto,
   MIN_QUALITY_SCORE: 0.3, CENTROID_DIVERSITY: null}
 domain_keyword_extraction: {keybert_model: all-MiniLM-L6-v2, top_n_per_doc: 50, final_top_n: 200,
-  min_doc_freq_mode: absolute, min_doc_freq_abs: 1, min_doc_freq_frac: 0.006, diversity: 0.7,
-  no_pos_filter: true, min_doc_freq: 1, extraction_diversity: 0.7}
+  min_doc_freq_mode: absolute, min_doc_freq_abs: 1, min_doc_freq_frac: 0.0, diversity: 0.3,
+  no_pos_filter: true, min_doc_freq: 1, extraction_diversity: null}
