--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,412 @@
+accelerate==1.5.2
+aiofiles==24.1.0
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.16
+aiohttp==3.11.14
 aiosignal==1.3.2
-altgraph==0.17.4
+albucore==0.0.16
+albumentations==1.4.15
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.9.0
+asgiref==3.8.1
 attrs==25.3.0
+audioread==3.0.1
 Authlib==1.3.1
+Automat==24.8.1
+av==14.2.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.3
+blend_modes==2.2.0
 blinker==1.9.0
-blis==0.7.11
+blis==1.3.0
+BlurGenerator==1.1.0
+build==1.2.2.post1
 cachelib==0.13.0
+cachetools==5.5.2
 catalogue==2.0.10
 certifi==2025.1.31
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
-click==8.1.7
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+clip-interrogator==0.6.0
 cloudpathlib==0.21.0
+cmake==3.31.6
+color-matcher==0.5.0
 colorama==0.4.6
+coloredlogs==15.0.1
+colour==0.1.5
+colour-science==0.4.6
+comfyui_frontend_package==1.21.2
+comfyui_workflow_templates==0.1.1
 confection==0.1.5
-contourpy==1.3.2
+constantly==23.10.4
+contourpy==1.3.1
 cryptography==44.0.2
-cssbeautifier==1.15.4
+cssselect==1.3.0
+cstr @ git+https://github.com/WASasquatch/cstr@0520c29a18a7a869a6e5983861d6f7a4c86f8e9b
+cupy-cuda12x==13.4.1
 cycler==0.12.1
 cymem==2.0.11
+Cython==3.0.12
 dataclasses-json==0.6.7
-deprecation==2.1.0
-djlint==1.36.4
+ddt==1.7.2
+decorator==5.2.1
+deepdiff==8.4.2
+defusedxml==0.7.1
+Deprecated==1.2.18
+diffusers==0.32.2
+dill==0.3.9
+distro==1.9.0
 docker==7.1.0
-EditorConfig==0.17.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-Faker==37.1.0
+docstring_parser==0.16
+docutils==0.21.2
+durationpy==0.9
+easydict==1.13
+effdet==0.4.1
+einops==0.8.1
+emoji==2.14.1
+eval_type_backport==0.2.2
+fairscale==0.4.13
+fal_client==0.7.0
+fastapi==0.115.11
+fastrlock==0.8.3
+ffmpy @ git+https://github.com/WASasquatch/ffmpy.git@f000737698b387ffaeab7cd871b0e9185811230d
 filelock==3.18.0
+filetype==1.2.0
 Flask==3.1.0
+Flask-Login==0.6.3
 Flask-Session==0.8.0
 Flask-SQLAlchemy==3.1.1
-fonttools==4.58.0
+flatbuffers==25.2.10
+flet==0.27.6
+fonttools==4.56.0
 frozenlist==1.5.0
-fsspec==2025.3.2
+fsspec==2025.3.0
+ftfy==6.3.1
 fuzzywuzzy==0.18.0
+g==0.0.7
+gdown==5.2.0
+gguf==0.14.0
+gitdb==4.0.12
+GitPython==3.1.44
+glcontext==3.0.0
+glfw==2.8.0
+glitch_this==1.0.3
+google-api-core==2.24.2
+google-auth==2.38.0
+google-cloud-core==2.4.3
+google-cloud-storage==3.1.0
+google-cloud-vision==3.10.1
+google-crc32c==1.7.1
+google-genai==1.7.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.69.2
+gpytoolbox==0.3.3
+gradio_client==1.8.0
 greenlet==3.1.1
 grpcio==1.71.0
 grpcio-health-checking==1.71.0
+grpcio-status==1.71.0
 grpcio-tools==1.71.0
 h11==0.14.0
+hatchling==1.27.0
+html5lib==1.1
 httpcore==1.0.7
-httpx==0.27.0
+httptools==0.6.4
+httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.30.2
+huggingface-hub==0.29.3
+humanfriendly==10.0
+hyperlink==21.0.0
 idna==3.10
+igraph==0.11.8
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+img2texture @ git+https://github.com/WASasquatch/img2texture.git@d6159abea44a0b2cf77454d3d46962c8b21eb9d3
+importlib_metadata==8.6.1
 importlib_resources==6.5.2
+incremental==24.7.2
+insightface @ file:///F:/insightface-0.7.3-cp312-cp312-win_amd64.whl#sha256=4e58a504433ba5a500d48328689e7d6c69873165653ded7553ce804beb8723db
+iopath==0.1.10
+itemadapter==0.11.0
+itemloaders==1.3.2
 itsdangerous==2.2.0
+jaxtyping==0.2.38
 Jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
 joblib==1.4.2
-jsbeautifier==1.15.4
-json5==0.12.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-keybert==0.9.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
-langchain==0.3.23
-langchain-community==0.3.21
-langchain-core==0.3.51
-langchain-ollama==0.3.1
-langchain-text-splitters==0.3.8
+kornia==0.8.0
+kornia_rs==0.1.8
+kubernetes==32.0.1
+langchain==0.3.21
+langchain-chroma==0.2.2
+langchain-community==0.3.20
+langchain-core==0.3.47
+langchain-ollama==0.3.0
+langchain-text-splitters==0.3.7
 langchain-weaviate==0.0.4
 langcodes==3.5.0
-langsmith==0.3.28
+langdetect==1.0.9
+langsmith==0.1.147
 language_data==1.3.0
+lark==1.2.2
+lazy_loader==0.4
 Levenshtein==0.27.1
-lxml==5.4.0
+libigl==2.5.1
+librosa==0.11.0
+lightning-utilities==0.14.1
+llvmlite==0.44.0
+lmdb==1.6.2
+loguru==0.7.3
+lxml==5.3.1
 marisa-trie==1.2.1
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-matplotlib==3.10.3
+matplotlib==3.10.1
+matrix-client==0.4.0
 mdurl==0.1.2
+mmh3==5.1.0
+moderngl==5.12.0
+monotonic==1.6
+moviepy==2.1.2
 mpmath==1.3.0
+msgpack==1.1.0
 msgspec==0.19.0
+mss==10.0.0
 multidict==6.2.0
 murmurhash==1.0.12
 mypy-extensions==1.0.0
+nerfacc==0.5.3
+nest-asyncio==1.6.0
 networkx==3.4.2
+ninja==1.11.1.3
 nltk==3.9.1
+numba==0.61.0
 numpy==1.26.4
-ollama==0.4.7
-orjson==3.10.16
-packaging==24.2
+nvidia-ml-py==12.570.86
+oauthlib==3.2.2
+olefile==0.47
+ollama==0.4.8
+omegaconf==2.3.0
+onnx==1.17.0
+onnxruntime==1.21.0
+onnxruntime-gpu==1.21.0
+open_clip_torch==2.31.0
+openai==1.66.5
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.31.0
+opentelemetry-exporter-otlp-proto-common==1.31.0
+opentelemetry-exporter-otlp-proto-grpc==1.31.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-asgi==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-proto==1.31.0
+opentelemetry-sdk==1.31.0
+opentelemetry-semantic-conventions==0.52b0
+opentelemetry-util-http==0.52b0
+orderly-set==5.3.0
+orjson==3.10.15
+overrides==7.7.0
+packaging==23.2
 pandas==2.2.3
+parsel==1.10.0
 pathspec==0.12.1
+pdf2image==1.17.0
 pdfminer.six==20250327
 pdfplumber==0.11.6
-pefile==2023.2.7
-pillow==11.1.0
+peft==0.14.0
+pi_heif==0.22.0
+piexif==1.1.3
+pikepdf==9.5.2
+pilgram==1.2.1
+pillow==10.4.0
+pixeloe==0.1.4
+platformdirs==4.3.6
+pluggy==1.5.0
+plyfile==1.1
+pooch==1.8.2
+portalocker==3.1.1
+posthog==3.21.0
 preshed==3.0.9
-prettytable==3.16.0
-propcache==0.3.1
+prettytable==3.15.1
+proglog==0.1.10
+propcache==0.3.0
+Protego==0.4.0
+proto-plus==1.26.1
 protobuf==5.29.4
 psutil==7.0.0
+py-cpuinfo==9.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycocotools==2.0.8
 pycparser==2.22
-pydantic==2.11.3
+pydantic==2.10.6
 pydantic-settings==2.8.1
-pydantic_core==2.33.1
-pyflakes==3.3.2
+pydantic_core==2.27.2
+PyDispatcher==2.0.7
+PyGithub==2.6.1
+pygltflib==1.16.3
 Pygments==2.19.1
-pyinstaller==6.13.0
-pyinstaller-hooks-contrib==2025.3
-pyparsing==3.2.3
+pyhocon==0.3.61
+PyJWT==2.10.1
+PyMatting==1.1.13
+PyMCubes==0.1.6
+pymeshfix==0.17.0
+pymeshlab==2023.12.post3
+PyMuPDF==1.25.4
+PyNaCl==1.5.0
+pynvml==12.0.0
+PyOpenGL==3.1.9
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
+pypdf==5.4.0
 PyPDF2==3.0.1
 pypdfium2==4.30.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
-python-dotenv==1.1.0
+python-dotenv==1.0.1
+python-iso639==2025.2.18
 python-Levenshtein==0.27.1
-pytz==2025.2
-pywin32==310
-pywin32-ctypes==0.2.3
+python-magic==0.4.27
+python-multipart==0.0.20
+python-oxmsg==0.0.2
+pytorch-lightning==2.5.0.post0
+pytorch-msssim==1.0.0
+pytz==2025.1
+pyvista==0.44.2
+pywin32==306
 PyYAML==6.0.2
-RapidFuzz==3.13.0
+qrcode==8.1
+queuelib==1.7.0
+RapidFuzz==3.12.2
+referencing==0.36.2
 regex==2024.11.6
+rembg==2.0.65
+repath==0.9.0
+reportlab==4.3.1
 requests==2.32.3
+requests-file==2.1.0
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rich==14.0.0
+requirements-parser==0.11.0
+rich==13.9.4
+rich-argparse==1.7.0
+rpds-py==0.23.1
+rsa==4.9
+runwayml==3.2.0
 safetensors==0.5.3
+scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.2
-semver==3.0.4
-sentence-transformers==4.0.2
-setuptools==78.1.0
+scooby==0.10.0
+Scrapy==2.12.0
+scs==3.2.7.post2
+seaborn==0.13.2
+segment-anything==1.0
+sentence-transformers==3.4.1
+sentencepiece==0.2.0
+service-identity==24.2.0
+setuptools==76.0.0
 shellingham==1.5.4
+shtab==1.7.1
+simpleeval==1.0.3
 simsimd==6.2.1
 six==1.17.0
+slangtorch==1.3.4
 smart-open==7.1.0
+smmap==5.0.2
 sniffio==1.3.1
-spacy==3.7.5
+sounddevice==0.5.1
+soundfile==0.13.1
+soupsieve==2.6
+soxr==0.5.0.post1
+spacy==3.8.5
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
-SQLAlchemy==2.0.40
+spandrel==0.4.1
+SQLAlchemy==2.0.39
 srsly==2.5.1
-sympy==1.13.1
-tabulate==0.9.0
-tenacity==9.1.2
-thinc==8.2.5
+starlette==0.46.1
+stringzilla==3.12.3
+sympy==1.13.3
+tenacity==8.5.0
+texttable==1.7.0
+thinc==8.3.6
 threadpoolctl==3.6.0
+tifffile==2025.3.13
+timm==1.0.15
 tk==0.1.0
+tldextract==5.1.3
 tokenizers==0.21.1
-torch==2.6.0+cu126
-torchaudio==2.6.0+cu126
-torchvision==0.21.0+cu126
+toml==0.10.2
+torch==2.8.0.dev20250316+cu128
+torchaudio==2.6.0.dev20250317+cu128
+torchmetrics==1.6.3
+torchsde==0.2.6
+torchtyping==0.1.5
+torchvision==0.22.0.dev20250317+cu128
 tqdm==4.67.1
-transformers==4.51.1
+trampoline==0.1.2
+transformers==4.49.0
+transparent-background==1.3.3
+trimesh==4.6.4
+trove-classifiers==2025.3.13.13
+Twisted==24.11.0
+typeguard==2.13.3
 typer==0.15.2
+types-setuptools==76.0.0.20250313
 typing-inspect==0.9.0
 typing-inspection==0.4.0
-typing_extensions==4.13.1
-tzdata==2025.2
-urllib3==2.3.0
+typing_extensions==4.12.2
+tyro==0.8.5
+tzdata==2025.1
+ultralytics==8.3.40
+ultralytics-thop==2.0.14
+unstructured==0.17.2
+unstructured-client==0.31.3
+unstructured-inference==0.8.10
+unstructured.pytesseract==0.3.15
+urllib3==1.26.20
+utils3d @ git+https://github.com/EasternJournalist/utils3d.git@db0c68cbdc9a26bea1a580a2e39c6b8ff12f87b5
+uv==0.6.7
+uvicorn==0.34.0
 validators==0.34.0
+vtk==9.3.1
+w3lib==2.3.1
+wadler_lindig==0.1.4
 wasabi==1.1.3
+watchfiles==1.0.4
 wcwidth==0.2.13
 weasel==0.4.1
-weaviate-cli==3.2.0
-weaviate-client==4.13.0
+weaviate-client==4.12.0
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
-wheel==0.45.1
+wget==3.2
+win32_setctime==1.2.0
 wrapt==1.17.2
-yamllint==1.37.1
-yarl==1.19.0
+xatlas==0.0.9
+yarl==1.18.3
+yt-dlp==2025.2.19
+zipp==3.21.0
+zope.interface==7.2
 zstandard==0.23.0
